--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     environment:
       POSTGRES_USER: docker
       POSTGRES_PASSWORD: docker
-      POSTGRES_DB: better-auth
+      POSTGRES_DB: food-finance
     ports:
       - "3333:5432"
     volumes:
